Update of plots and histograms
Now restricted to last more than 35 days

--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +99,20 @@
     "                            'lpsig_b': 'shareH',\n",
     "                             'index':'cat'},inplace='True')\n",
     "    tab_short = tab_short[['shareC','shareDD','shareH','shareS','cat','var','mean_days']]\n",
+    "    return tab_short\n",
+    "\n",
+    "def format_very_short_levels(AllTab):\n",
+    "    tab_short = AllTab.T[['psig_c','psig_e','psig_b']]\n",
+    "    tab_short = tab_short\n",
+    "    tab_short.reset_index(level=0,inplace=True)\n",
+    "#     tab_short['shareC'] = 1-AllTab.iloc[-3:].sum().values\n",
+    "    tab_short['var'] = AllTab.loc['sig_y'].values\n",
+    "    tab_short['mean_days'] = AllTab.loc['mu_y'].values\n",
+    "    tab_short.rename(columns={'psig_c': 'shareC',\n",
+    "                            'psig_e': 'shareDD',\n",
+    "                            'psig_b': 'shareH',\n",
+    "                             'index':'cat'},inplace='True')\n",
+    "    tab_short = tab_short[['shareC','shareDD','shareH','cat','var','mean_days']]\n",
     "    return tab_short\n",
     "\n",
     "def format_column_names(column_names):\n",
@@ -257,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -285,41 +299,36 @@
        "      <th>1</th>\n",
        "      <th>2</th>\n",
        "      <th>3</th>\n",
-       "      <th>4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>shareC</th>\n",
-       "      <td>1.29015</td>\n",
-       "      <td>1.12232</td>\n",
-       "      <td>0.739772</td>\n",
-       "      <td>0.494674</td>\n",
-       "      <td>0.656237</td>\n",
+       "      <td>1.08985</td>\n",
+       "      <td>1.00961</td>\n",
+       "      <td>0.892389</td>\n",
+       "      <td>0.74435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shareDD</th>\n",
-       "      <td>-0.507585</td>\n",
-       "      <td>-0.358525</td>\n",
-       "      <td>0.0871109</td>\n",
-       "      <td>0.262172</td>\n",
-       "      <td>-0.148</td>\n",
+       "      <td>-0.265822</td>\n",
+       "      <td>-0.20879</td>\n",
+       "      <td>-0.0385735</td>\n",
+       "      <td>0.106671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shareH</th>\n",
-       "      <td>0.206385</td>\n",
-       "      <td>0.23094</td>\n",
-       "      <td>0.166731</td>\n",
-       "      <td>0.238944</td>\n",
-       "      <td>0.491514</td>\n",
+       "      <td>0.172984</td>\n",
+       "      <td>0.198261</td>\n",
+       "      <td>0.145643</td>\n",
+       "      <td>0.148533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shareS</th>\n",
-       "      <td>0.0110456</td>\n",
-       "      <td>0.0052622</td>\n",
-       "      <td>0.0063861</td>\n",
-       "      <td>0.0042101</td>\n",
-       "      <td>0.0002483</td>\n",
+       "      <td>0.002984</td>\n",
+       "      <td>0.0009149</td>\n",
+       "      <td>0.0005407</td>\n",
+       "      <td>0.0004455</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cat</th>\n",
@@ -327,72 +336,182 @@
        "      <td>LTU</td>\n",
        "      <td>STU+SpellAdj</td>\n",
        "      <td>NE+SpellAdj</td>\n",
-       "      <td>Recalls</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>var</th>\n",
-       "      <td>1.27499</td>\n",
-       "      <td>1.46565</td>\n",
-       "      <td>2.22357</td>\n",
-       "      <td>3.32529</td>\n",
-       "      <td>2.50661</td>\n",
+       "      <td>1.50932</td>\n",
+       "      <td>1.62927</td>\n",
+       "      <td>1.84329</td>\n",
+       "      <td>2.20989</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean_days</th>\n",
-       "      <td>190.758</td>\n",
-       "      <td>253.933</td>\n",
-       "      <td>244.732</td>\n",
-       "      <td>182.174</td>\n",
-       "      <td>54.3278</td>\n",
+       "      <td>192.294</td>\n",
+       "      <td>257.452</td>\n",
+       "      <td>273.378</td>\n",
+       "      <td>246.661</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>N</th>\n",
-       "      <td>430272</td>\n",
-       "      <td>391578</td>\n",
-       "      <td>624398</td>\n",
-       "      <td>869048</td>\n",
-       "      <td>132376</td>\n",
+       "      <td>335750</td>\n",
+       "      <td>335750</td>\n",
+       "      <td>462112</td>\n",
+       "      <td>589474</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   0          1             2            3          4\n",
-       "shareC       1.29015    1.12232      0.739772     0.494674   0.656237\n",
-       "shareDD    -0.507585  -0.358525     0.0871109     0.262172     -0.148\n",
-       "shareH      0.206385    0.23094      0.166731     0.238944   0.491514\n",
-       "shareS     0.0110456  0.0052622     0.0063861    0.0042101  0.0002483\n",
-       "cat              Raw        LTU  STU+SpellAdj  NE+SpellAdj    Recalls\n",
-       "var          1.27499    1.46565       2.22357      3.32529    2.50661\n",
-       "mean_days    190.758    253.933       244.732      182.174    54.3278\n",
-       "N             430272     391578        624398       869048     132376"
+       "                  0          1             2            3\n",
+       "shareC      1.08985    1.00961      0.892389      0.74435\n",
+       "shareDD   -0.265822   -0.20879    -0.0385735     0.106671\n",
+       "shareH     0.172984   0.198261      0.145643     0.148533\n",
+       "shareS     0.002984  0.0009149     0.0005407    0.0004455\n",
+       "cat             Raw        LTU  STU+SpellAdj  NE+SpellAdj\n",
+       "var         1.50932    1.62927       1.84329      2.20989\n",
+       "mean_days   192.294    257.452       273.378      246.661\n",
+       "N            335750     335750        462112       589474"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "table_raw, names, column_names, noobs = read_results('results/all_results96_7.log')\n",
+    "table_raw, names, column_names, noobs = read_results('results/all_results96_30.log')\n",
     "table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
-    "AllTab_r = pd.DataFrame(table_raw_r[1:,:].T, index=names_latex, columns=[\"Recalls\",])\n",
     "names_latex = format_names(names)\n",
-    "\n",
+    "# names_latex = format_names(names)\n",
     "names_latex = names\n",
     "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
-    "AllTab['Recalls'] = AllTab_r\n",
     "short_tab96_noA= format_very_short(AllTab)\n",
-    "short_tab96_noA['N'] = np.array(np.hstack((noobs,noobs_r)))\n",
-    "short_tab96_noA.round(3).to_stata('results/all_results96_7.dta')\n",
+    "short_tab96_noA['N'] = noobs\n",
+    "short_tab96_noA.round(3).to_stata('results/all_results96_35.dta')\n",
     "short_tab96_noA\n",
     "short_tab96_noA.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>shareC</th>\n",
+       "      <td>0.629378</td>\n",
+       "      <td>0.588135</td>\n",
+       "      <td>0.532309</td>\n",
+       "      <td>0.480794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shareDD</th>\n",
+       "      <td>0.273408</td>\n",
+       "      <td>0.286938</td>\n",
+       "      <td>0.35183</td>\n",
+       "      <td>0.41343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shareH</th>\n",
+       "      <td>0.0972148</td>\n",
+       "      <td>0.124927</td>\n",
+       "      <td>0.115861</td>\n",
+       "      <td>0.105776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cat</th>\n",
+       "      <td>Raw</td>\n",
+       "      <td>LTU</td>\n",
+       "      <td>STU+SpellAdj</td>\n",
+       "      <td>NE+SpellAdj</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>var</th>\n",
+       "      <td>69483.7</td>\n",
+       "      <td>143092</td>\n",
+       "      <td>179458</td>\n",
+       "      <td>162236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean_days</th>\n",
+       "      <td>192.294</td>\n",
+       "      <td>257.452</td>\n",
+       "      <td>273.378</td>\n",
+       "      <td>246.661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>N</th>\n",
+       "      <td>335750</td>\n",
+       "      <td>335750</td>\n",
+       "      <td>462112</td>\n",
+       "      <td>589474</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   0         1             2            3\n",
+       "shareC      0.629378  0.588135      0.532309     0.480794\n",
+       "shareDD     0.273408  0.286938       0.35183      0.41343\n",
+       "shareH     0.0972148  0.124927      0.115861     0.105776\n",
+       "cat              Raw       LTU  STU+SpellAdj  NE+SpellAdj\n",
+       "var          69483.7    143092        179458       162236\n",
+       "mean_days    192.294   257.452       273.378      246.661\n",
+       "N             335750    335750        462112       589474"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_raw, names, column_names, noobs = read_results('results/all_results96_30.log')\n",
+    "table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
+    "names_latex = format_names(names)\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "short_tab96_noA= format_very_short_levels(AllTab)\n",
+    "short_tab96_noA['N'] = noobs\n",
+    "short_tab96_noA.round(3).to_stata('results/all_results96_35_levels.dta')\n",
+    "short_tab96_noA\n",
+    "short_tab96_noA.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -421,6 +540,7 @@
        "      <th>2</th>\n",
        "      <th>3</th>\n",
        "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -428,38 +548,43 @@
        "      <th>shareC</th>\n",
        "      <td>1.29015</td>\n",
        "      <td>1.12232</td>\n",
+       "      <td>0.692755</td>\n",
        "      <td>0.559715</td>\n",
        "      <td>0.494674</td>\n",
-       "      <td>0.656237</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shareDD</th>\n",
        "      <td>-0.507585</td>\n",
        "      <td>-0.358525</td>\n",
+       "      <td>0.120677</td>\n",
        "      <td>0.252955</td>\n",
        "      <td>0.262172</td>\n",
-       "      <td>-0.148</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shareH</th>\n",
        "      <td>0.206385</td>\n",
        "      <td>0.23094</td>\n",
+       "      <td>0.186137</td>\n",
        "      <td>0.182</td>\n",
        "      <td>0.238944</td>\n",
-       "      <td>0.491514</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shareS</th>\n",
        "      <td>0.0110456</td>\n",
        "      <td>0.0052622</td>\n",
+       "      <td>0.0004313</td>\n",
        "      <td>0.00533</td>\n",
        "      <td>0.0042101</td>\n",
-       "      <td>0.0002483</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cat</th>\n",
        "      <td>Raw</td>\n",
        "      <td>LTU</td>\n",
+       "      <td>STU</td>\n",
        "      <td>STU+SpellAdj</td>\n",
        "      <td>NE+SpellAdj</td>\n",
        "      <td>Recalls</td>\n",
@@ -468,22 +593,25 @@
        "      <th>var</th>\n",
        "      <td>1.27499</td>\n",
        "      <td>1.46565</td>\n",
+       "      <td>2.37448</td>\n",
        "      <td>2.93888</td>\n",
        "      <td>3.32529</td>\n",
-       "      <td>2.50661</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean_days</th>\n",
        "      <td>190.758</td>\n",
        "      <td>253.933</td>\n",
+       "      <td>259.382</td>\n",
        "      <td>226</td>\n",
        "      <td>182.174</td>\n",
-       "      <td>54.3278</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>N</th>\n",
        "      <td>430272</td>\n",
        "      <td>391578</td>\n",
+       "      <td>667060</td>\n",
        "      <td>667060</td>\n",
        "      <td>869048</td>\n",
        "      <td>132376</td>\n",
@@ -493,18 +621,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                   0          1             2            3          4\n",
-       "shareC       1.29015    1.12232      0.559715     0.494674   0.656237\n",
-       "shareDD    -0.507585  -0.358525      0.252955     0.262172     -0.148\n",
-       "shareH      0.206385    0.23094         0.182     0.238944   0.491514\n",
-       "shareS     0.0110456  0.0052622       0.00533    0.0042101  0.0002483\n",
-       "cat              Raw        LTU  STU+SpellAdj  NE+SpellAdj    Recalls\n",
-       "var          1.27499    1.46565       2.93888      3.32529    2.50661\n",
-       "mean_days    190.758    253.933           226      182.174    54.3278\n",
-       "N             430272     391578        667060       869048     132376"
+       "                   0          1          2             3            4        5\n",
+       "shareC       1.29015    1.12232   0.692755      0.559715     0.494674        1\n",
+       "shareDD    -0.507585  -0.358525   0.120677      0.252955     0.262172      NaN\n",
+       "shareH      0.206385    0.23094   0.186137         0.182     0.238944      NaN\n",
+       "shareS     0.0110456  0.0052622  0.0004313       0.00533    0.0042101      NaN\n",
+       "cat              Raw        LTU        STU  STU+SpellAdj  NE+SpellAdj  Recalls\n",
+       "var          1.27499    1.46565    2.37448       2.93888      3.32529      NaN\n",
+       "mean_days    190.758    253.933    259.382           226      182.174      NaN\n",
+       "N             430272     391578     667060        667060       869048   132376"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +648,7 @@
     "AllTab['Recalls'] = AllTab_r\n",
     "short_tab96_noA= format_very_short(AllTab)\n",
     "short_tab96_noA['N'] = np.array(np.hstack((noobs,noobs_r)))\n",
-    "short_tab96_noA.round(3).to_stata('results/all_results96.dta')\n",
+    "# short_tab96_noA.round(3).to_stata('results/all_results96.dta')\n",
     "short_tab96_noA\n",
     "short_tab96_noA.T"
    ]
