--- a/tables_appendix.ipynb
+++ b/tables_appendix.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,26 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tab_short = \n",
-    "    tab_short = tab_short.T\n",
-    "    tab_short.reset_index(level=0,inplace=True)\n",
-    "    tab_short['shareC'] = 1-AllTab.iloc[-3:].sum().values\n",
-    "    tab_short['var'] = AllTab.iloc[-8].values\n",
-    "    tab_short['mean_days'] = AllTab.loc['mu_y'].values\n",
-    "    tab_short.rename(columns={'lpsig_x': 'shareS',\n",
-    "                            'lpsig_e': 'shareDD',\n",
-    "                            'lpsig_b': 'shareH',\n",
-    "                             'index':'cat'},inplace='True')\n",
-    "    tab_short = tab_short[['shareC','shareDD','shareH','shareS','cat','var','mean_days']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +287,8 @@
       "                 &    (-0.51) &     (-0.36) &      (0.25) &      (0.26) \\\\\n",
       "$\\hat{\\sigma}_b$ &       0.25 &        0.33 &        0.52 &        0.78 \\\\\n",
       "                 &     (0.21) &      (0.23) &      (0.18) &      (0.24) \\\\\n",
-      "N                &    430,272 &     391,578 &     667,060 &     869,048 \\\\\n",
+      "N                &     430272 &      391578 &      667060 &      869048 \\\\\n",
+      "n                &    430,272 &     391,578 &     667,060 &     869,048 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -315,6 +297,73 @@
    ],
    "source": [
     "table_raw, names, column_names, noobs = read_results('results/all_results96.log')\n",
+    "names_latex = format_names(names)\n",
+    "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
+    "                     'lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
+    "parenthesis_names = ['psig_c','psig_e','psig_b','plsig_c','lpsig_e','lpsig_b']\n",
+    "# table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
+    "names[6] = 'lsig_co'\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names, columns=column_names)\n",
+    "\n",
+    "# rows\n",
+    "AllTab = AllTab.T\n",
+    "AllTab['plsig_c'] = AllTab['lsig_c']/AllTab['lsig_y2']\n",
+    "AllTab = AllTab[final_names]\n",
+    "\n",
+    "AllTab['N'] = np.array(noobs)\n",
+    "\n",
+    "#columns\n",
+    "AllTab = AllTab.T\n",
+    "AllTab = AllTab[['Raw','LTU','STU+SpellAdj','NE+SpellAdj']]\n",
+    "AllTab = AllTab.rename(columns={'STU+SpellAdj':'STU','NE+SpellAdj':\"NE\"})\n",
+    "for name in final_names:\n",
+    "    if name in parenthesis_names:\n",
+    "        AllTab.loc[name]= AllTab.loc[name].apply(lambda x: \"({:,.2f})\".format(float(x)))\n",
+    "    else:\n",
+    "        AllTab.loc[name]= AllTab.loc[name].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "AllTab.loc['n'] = AllTab.loc['N'].apply(lambda x: \"{:,.0f}\".format(float(x)))\n",
+    "\n",
+    "AllTab = AllTab.rename(index=dict(zip(names,names_latex)))\n",
+    "print(AllTab.to_latex(escape=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lllll}\n",
+      "\\toprule\n",
+      "{} &        Raw &         LTU &         STU &          NE \\\\\n",
+      "\\midrule\n",
+      "$\\hat{\\mu}_y$    &     192.29 &      257.45 &      273.38 &      246.66 \\\\\n",
+      "$\\hat{\\sigma}_y$ &  69,483.74 &  143,092.10 &  179,458.40 &  162,236.50 \\\\\n",
+      "$\\hat{\\sigma}_c$ &  43,731.52 &   84,157.50 &   95,527.38 &   78,002.34 \\\\\n",
+      "                 &     (0.63) &      (0.59) &      (0.53) &      (0.48) \\\\\n",
+      "$\\hat{\\sigma}_e$ &  18,997.38 &   41,058.52 &   63,138.81 &   67,073.44 \\\\\n",
+      "                 &     (0.27) &      (0.29) &      (0.35) &      (0.41) \\\\\n",
+      "$\\hat{\\sigma}_b$ &   6,754.85 &   17,876.11 &   20,792.24 &   17,160.70 \\\\\n",
+      "                 &     (0.10) &      (0.12) &      (0.12) &      (0.11) \\\\\n",
+      "$\\hat{\\sigma}_c$ &       1.64 &        1.64 &        1.64 &        1.64 \\\\\n",
+      "                 &     (1.09) &      (1.01) &      (0.89) &      (0.74) \\\\\n",
+      "$\\hat{\\sigma}_e$ &      -0.39 &       -0.34 &       -0.07 &        0.24 \\\\\n",
+      "                 &    (-0.27) &     (-0.21) &     (-0.04) &      (0.11) \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.26 &        0.32 &        0.27 &        0.33 \\\\\n",
+      "                 &     (0.17) &      (0.20) &      (0.15) &      (0.15) \\\\\n",
+      "N                &     335750 &      335750 &      462112 &      589474 \\\\\n",
+      "n                &    335,750 &     335,750 &     462,112 &     589,474 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_raw, names, column_names, noobs = read_results('results/all_results96_30.log')\n",
     "names_latex = format_names(names)\n",
     "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
     "                     'lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
