Update and cleanup of do-files

--- a/tables_appendix.ipynb
+++ b/tables_appendix.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -273,22 +273,22 @@
       "\\toprule\n",
       "{} &        Raw &         LTU &         STU &          NE \\\\\n",
       "\\midrule\n",
-      "$\\hat{\\mu}_y$    &     190.76 &      253.93 &      226.00 &      182.17 \\\\\n",
-      "$\\hat{\\sigma}_y$ &  66,216.70 &  137,446.50 &  171,335.50 &  142,494.00 \\\\\n",
-      "$\\hat{\\sigma}_c$ &  43,338.46 &   82,829.80 &   71,756.18 &   49,024.22 \\\\\n",
+      "$\\hat{\\mu}_y$    &     188.47 &      251.36 &      225.21 &      181.84 \\\\\n",
+      "$\\hat{\\sigma}_y$ &  66,006.31 &  136,710.30 &  170,835.90 &  142,086.80 \\\\\n",
+      "$\\hat{\\sigma}_c$ &  42,575.36 &   81,526.63 &   71,360.46 &   48,872.06 \\\\\n",
       "                 &     (0.65) &      (0.60) &      (0.42) &      (0.34) \\\\\n",
-      "$\\hat{\\sigma}_e$ &  15,928.33 &   36,268.23 &   78,898.72 &   77,632.69 \\\\\n",
-      "                 &     (0.24) &      (0.26) &      (0.46) &      (0.54) \\\\\n",
-      "$\\hat{\\sigma}_b$ &   6,949.91 &   18,348.45 &   20,680.60 &   15,837.13 \\\\\n",
-      "                 &     (0.10) &      (0.13) &      (0.12) &      (0.11) \\\\\n",
+      "$\\hat{\\sigma}_e$ &  16,377.16 &   36,837.83 &   78,832.23 &   77,406.55 \\\\\n",
+      "                 &     (0.25) &      (0.27) &      (0.46) &      (0.54) \\\\\n",
+      "$\\hat{\\sigma}_b$ &   7,053.79 &   18,345.88 &   20,643.17 &   15,808.17 \\\\\n",
+      "                 &     (0.11) &      (0.13) &      (0.12) &      (0.11) \\\\\n",
       "$\\hat{\\sigma}_c$ &       1.64 &        1.64 &        1.64 &        1.64 \\\\\n",
-      "                 &     (1.29) &      (1.12) &      (0.56) &      (0.49) \\\\\n",
-      "$\\hat{\\sigma}_e$ &      -0.62 &       -0.51 &        0.77 &        0.90 \\\\\n",
-      "                 &    (-0.51) &     (-0.36) &      (0.25) &      (0.26) \\\\\n",
-      "$\\hat{\\sigma}_b$ &       0.25 &        0.33 &        0.52 &        0.78 \\\\\n",
-      "                 &     (0.21) &      (0.23) &      (0.18) &      (0.24) \\\\\n",
-      "N                &     430272 &      391578 &      667060 &      869048 \\\\\n",
-      "n                &    430,272 &     391,578 &     667,060 &     869,048 \\\\\n",
+      "                 &     (1.23) &      (1.09) &      (0.56) &      (0.49) \\\\\n",
+      "$\\hat{\\sigma}_e$ &      -0.60 &       -0.50 &        0.77 &        0.90 \\\\\n",
+      "                 &    (-0.47) &     (-0.34) &      (0.25) &      (0.26) \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.29 &        0.36 &        0.52 &        0.78 \\\\\n",
+      "                 &     (0.23) &      (0.24) &      (0.18) &      (0.24) \\\\\n",
+      "N                &     441650 &      400714 &      672456 &      873268 \\\\\n",
+      "n                &    441,650 &     400,714 &     672,456 &     873,268 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -322,6 +322,77 @@
     "    else:\n",
     "        AllTab.loc[name]= AllTab.loc[name].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
     "AllTab.loc['n'] = AllTab.loc['N'].apply(lambda x: \"{:,.0f}\".format(float(x)))\n",
+    "\n",
+    "AllTab = AllTab.rename(index=dict(zip(names,names_latex)))\n",
+    "print(AllTab.to_latex(escape=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lll}\n",
+      "\\toprule\n",
+      "{} & Spell Control Only & All Controls \\\\\n",
+      "\\midrule\n",
+      "$\\hat{\\mu}_y$    &             225.21 &       216.37 \\\\\n",
+      "$\\hat{\\sigma}_y$ &         170,835.90 &   156,735.80 \\\\\n",
+      "$\\hat{\\sigma}_c$ &          71,360.46 &    65,056.94 \\\\\n",
+      "                 &             (0.42) &       (0.42) \\\\\n",
+      "$\\hat{\\sigma}_e$ &          78,832.23 &    73,436.09 \\\\\n",
+      "                 &             (0.46) &       (0.47) \\\\\n",
+      "$\\hat{\\sigma}_b$ &          20,643.17 &    18,242.80 \\\\\n",
+      "                 &             (0.12) &       (0.12) \\\\\n",
+      "$\\hat{\\sigma}_c$ &               1.64 &         1.64 \\\\\n",
+      "                 &             (0.56) &       (0.57) \\\\\n",
+      "$\\hat{\\sigma}_e$ &               0.77 &         0.74 \\\\\n",
+      "                 &             (0.25) &       (0.23) \\\\\n",
+      "$\\hat{\\sigma}_b$ &               0.52 &         0.48 \\\\\n",
+      "                 &             (0.18) &       (0.15) \\\\\n",
+      "n                &            672,456 &      648,704 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_raw, names, column_names, noobs = read_results('results/all_results96_x.log')\n",
+    "table_raw_o, names_o, column_names_o, noobs_o = read_results('results/all_results96.log')\n",
+    "names_latex = format_names(names)\n",
+    "final_names = ['mu_y','sig_y','sig_c','psig_c','sig_e','psig_e','sig_b','psig_b',\n",
+    "                     'lsig_c','plsig_c','lsig_e','lpsig_e','lsig_b','lpsig_b']\n",
+    "parenthesis_names = ['psig_c','psig_e','psig_b','plsig_c','lpsig_e','lpsig_b']\n",
+    "# table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
+    "names[6] = 'lsig_co'\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names, columns=column_names)\n",
+    "Tab_o = pd.DataFrame(table_raw_o[1:,:].T, index=names, columns=column_names_o)\n",
+    "Tab_o = Tab_o[['STU+SpellAdj',]]\n",
+    "Tab_o = Tab_o.rename(columns={'STU+SpellAdj':'Spell Control Only'})\n",
+    "AllTab= pd.concat((Tab_o,AllTab),axis=1)\n",
+    "\n",
+    "# rows\n",
+    "AllTab = AllTab.T\n",
+    "AllTab['plsig_c'] = AllTab['lsig_c']/AllTab['lsig_y2']\n",
+    "AllTab = AllTab[final_names]\n",
+    "\n",
+    "AllTab['n'] = np.array(np.hstack((noobs_o[-2],noobs)))\n",
+    "\n",
+    "#columns\n",
+    "AllTab = AllTab.T\n",
+    "# AllTab = AllTab[['Raw','LTU','STU+SpellAdj','NE+SpellAdj']]\n",
+    "AllTab = AllTab.rename(columns={'STU+SpellAdj':'All Controls'})\n",
+    "for name in final_names:\n",
+    "    if name in parenthesis_names:\n",
+    "        AllTab.loc[name]= AllTab.loc[name].apply(lambda x: \"({:,.2f})\".format(float(x)))\n",
+    "    else:\n",
+    "        AllTab.loc[name]= AllTab.loc[name].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "AllTab.loc['n'] = AllTab.loc['n'].apply(lambda x: \"{:,.0f}\".format(float(x)))\n",
     "\n",
     "AllTab = AllTab.rename(index=dict(zip(names,names_latex)))\n",
     "print(AllTab.to_latex(escape=False))"
@@ -370,7 +441,7 @@
     "parenthesis_names = ['psig_c','psig_e','psig_b','plsig_c','lpsig_e','lpsig_b']\n",
     "# table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
     "names[6] = 'lsig_co'\n",
-    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names, columns=column_names)\n",
+    "AllTab = pd.DataFrame(table_raw_g[1:,:].T, index=names, columns=column_names_g)\n",
     "\n",
     "# rows\n",
     "AllTab = AllTab.T\n",
@@ -396,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -407,21 +478,21 @@
       "\\toprule\n",
       "{} &       Women &         Men &     College & Non-College \\\\\n",
       "\\midrule\n",
-      "$\\hat{\\mu}_y$    &      284.70 &      178.19 &      197.69 &      230.83 \\\\\n",
-      "$\\hat{\\sigma}_y$ &  248,107.00 &  103,720.50 &  126,073.70 &  179,093.10 \\\\\n",
-      "$\\hat{\\sigma}_c$ &  105,323.20 &   44,418.57 &   52,585.83 &   75,164.22 \\\\\n",
+      "$\\hat{\\mu}_y$    &      283.31 &      177.77 &      196.67 &      230.11 \\\\\n",
+      "$\\hat{\\sigma}_y$ &  247,415.30 &  103,309.30 &  125,476.80 &  178,642.70 \\\\\n",
+      "$\\hat{\\sigma}_c$ &  104,577.40 &   44,241.58 &   52,229.30 &   74,776.85 \\\\\n",
       "                 &      (0.42) &      (0.43) &      (0.42) &      (0.42) \\\\\n",
-      "$\\hat{\\sigma}_e$ &  118,512.80 &   46,636.29 &   59,982.81 &   82,045.23 \\\\\n",
+      "$\\hat{\\sigma}_e$ &  118,522.90 &   46,428.03 &   59,697.75 &   82,038.80 \\\\\n",
       "                 &      (0.48) &      (0.45) &      (0.48) &      (0.46) \\\\\n",
-      "$\\hat{\\sigma}_b$ &   24,270.96 &   12,665.60 &   13,505.06 &   21,883.65 \\\\\n",
+      "$\\hat{\\sigma}_b$ &   24,314.96 &   12,639.70 &   13,549.70 &   21,827.08 \\\\\n",
       "                 &      (0.10) &      (0.12) &      (0.11) &      (0.12) \\\\\n",
       "$\\hat{\\sigma}_c$ &        1.64 &        1.64 &        1.64 &        1.64 \\\\\n",
-      "                 &      (0.56) &      (0.58) &      (0.55) &      (0.56) \\\\\n",
-      "$\\hat{\\sigma}_e$ &        0.88 &        0.69 &        0.88 &        0.74 \\\\\n",
+      "                 &      (0.55) &      (0.58) &      (0.55) &      (0.56) \\\\\n",
+      "$\\hat{\\sigma}_e$ &        0.87 &        0.69 &        0.87 &        0.74 \\\\\n",
       "                 &      (0.28) &      (0.24) &      (0.28) &      (0.24) \\\\\n",
-      "$\\hat{\\sigma}_b$ &        0.44 &        0.49 &        0.46 &        0.53 \\\\\n",
+      "$\\hat{\\sigma}_b$ &        0.45 &        0.49 &        0.46 &        0.53 \\\\\n",
       "                 &      (0.16) &      (0.18) &      (0.16) &      (0.19) \\\\\n",
-      "N                &     299,416 &     367,644 &     119,076 &     567,114 \\\\\n",
+      "N                &     302,246 &     370,210 &     120,226 &     571,454 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -467,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -478,21 +549,21 @@
       "\\toprule\n",
       "{} &  2002-2007 &  2008-2013 \\\\\n",
       "\\midrule\n",
-      "$\\hat{\\mu}_y$    &     165.33 &     202.94 \\\\\n",
-      "$\\hat{\\sigma}_y$ &  88,430.34 &  77,439.59 \\\\\n",
-      "$\\hat{\\sigma}_c$ &  39,608.46 &  45,858.76 \\\\\n",
-      "                 &     (0.45) &     (0.59) \\\\\n",
-      "$\\hat{\\sigma}_e$ &  36,545.77 &  26,904.48 \\\\\n",
+      "$\\hat{\\mu}_y$    &     164.80 &     201.55 \\\\\n",
+      "$\\hat{\\sigma}_y$ &  88,063.33 &  77,577.36 \\\\\n",
+      "$\\hat{\\sigma}_c$ &  39,413.73 &  45,366.67 \\\\\n",
+      "                 &     (0.45) &     (0.58) \\\\\n",
+      "$\\hat{\\sigma}_e$ &  36,393.47 &  27,466.68 \\\\\n",
       "                 &     (0.41) &     (0.35) \\\\\n",
-      "$\\hat{\\sigma}_b$ &  12,276.12 &   4,676.34 \\\\\n",
+      "$\\hat{\\sigma}_b$ &  12,256.13 &   4,744.01 \\\\\n",
       "                 &     (0.14) &     (0.06) \\\\\n",
       "$\\hat{\\sigma}_c$ &       1.64 &       1.64 \\\\\n",
       "                 &     (0.60) &     (0.70) \\\\\n",
-      "$\\hat{\\sigma}_e$ &       0.57 &       0.45 \\\\\n",
+      "$\\hat{\\sigma}_e$ &       0.57 &       0.44 \\\\\n",
       "                 &     (0.18) &     (0.17) \\\\\n",
-      "$\\hat{\\sigma}_b$ &       0.54 &       0.26 \\\\\n",
-      "                 &     (0.21) &     (0.12) \\\\\n",
-      "N                &    299,426 &    326,606 \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.54 &       0.28 \\\\\n",
+      "                 &     (0.21) &     (0.13) \\\\\n",
+      "N                &    301,482 &    332,684 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -534,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -545,21 +616,21 @@
       "\\toprule\n",
       "{} &  2002-2007 &  2008-2013 &  2002-2007 &  2008-2013 \\\\\n",
       "\\midrule\n",
-      "$\\hat{\\mu}_y$    &     166.84 &     207.06 &     155.12 &     179.60 \\\\\n",
-      "$\\hat{\\sigma}_y$ &  91,063.37 &  80,457.48 &  77,204.69 &  57,495.90 \\\\\n",
-      "$\\hat{\\sigma}_c$ &  40,817.05 &  47,621.09 &  32,797.27 &  36,105.39 \\\\\n",
-      "                 &     (0.45) &     (0.59) &     (0.42) &     (0.63) \\\\\n",
-      "$\\hat{\\sigma}_e$ &  37,264.28 &  28,090.94 &  35,669.91 &  17,541.44 \\\\\n",
-      "                 &     (0.41) &     (0.35) &     (0.46) &     (0.31) \\\\\n",
-      "$\\hat{\\sigma}_b$ &  12,982.03 &   4,745.46 &   8,737.51 &   3,849.07 \\\\\n",
+      "$\\hat{\\mu}_y$    &     166.41 &     205.75 &     154.19 &     178.10 \\\\\n",
+      "$\\hat{\\sigma}_y$ &  90,737.88 &  80,664.35 &  76,678.80 &  57,250.49 \\\\\n",
+      "$\\hat{\\sigma}_c$ &  40,643.58 &  47,121.37 &  32,543.23 &  35,728.13 \\\\\n",
+      "                 &     (0.45) &     (0.58) &     (0.42) &     (0.62) \\\\\n",
+      "$\\hat{\\sigma}_e$ &  37,141.29 &  28,752.39 &  35,366.53 &  17,512.56 \\\\\n",
+      "                 &     (0.41) &     (0.36) &     (0.46) &     (0.31) \\\\\n",
+      "$\\hat{\\sigma}_b$ &  12,953.00 &   4,790.59 &   8,769.03 &   4,009.80 \\\\\n",
       "                 &     (0.14) &     (0.06) &     (0.11) &     (0.07) \\\\\n",
       "$\\hat{\\sigma}_c$ &       1.64 &       1.64 &       1.64 &       1.64 \\\\\n",
-      "                 &     (0.60) &     (0.71) &     (0.58) &     (0.67) \\\\\n",
-      "$\\hat{\\sigma}_e$ &       0.53 &       0.42 &       0.73 &       0.51 \\\\\n",
-      "                 &     (0.17) &     (0.17) &     (0.23) &     (0.20) \\\\\n",
-      "$\\hat{\\sigma}_b$ &       0.55 &       0.26 &       0.46 &       0.29 \\\\\n",
-      "                 &     (0.22) &     (0.12) &     (0.18) &     (0.12) \\\\\n",
-      "N                &    256,826 &    283,276 &     50,922 &     55,264 \\\\\n",
+      "                 &     (0.60) &     (0.70) &     (0.58) &     (0.67) \\\\\n",
+      "$\\hat{\\sigma}_e$ &       0.53 &       0.42 &       0.71 &       0.50 \\\\\n",
+      "                 &     (0.17) &     (0.16) &     (0.23) &     (0.19) \\\\\n",
+      "$\\hat{\\sigma}_b$ &       0.56 &       0.27 &       0.47 &       0.31 \\\\\n",
+      "                 &     (0.22) &     (0.13) &     (0.18) &     (0.13) \\\\\n",
+      "N                &    258,384 &    288,454 &     51,442 &     56,274 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
