--- a/sample_selection/Sample Selection.ipynb
+++ b/sample_selection/Sample Selection.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import division\n",
     "import csv\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +80,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrl}\n",
+      "\\toprule\n",
+      "{} &  Individual obs & Share \\\\\n",
+      "\\midrule\n",
+      "0     &    1.470070e+05 &   inf \\\\\n",
+      "1     &    3.362280e+05 &   inf \\\\\n",
+      "2     &    4.832350e+05 &   inf \\\\\n",
+      "Total &   2.824701e-309 &  1.00 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spell_nos = ['0','1','2','Total']\n",
+    "noobs = np.empty(4)\n",
+    "i = 0\n",
+    "f = open('./spell_count.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>0 and words[0] in spell_nos:\n",
+    "        noobs[i] = float(words[2].replace(\",\",\"\"))\n",
+    "        i+=1\n",
+    "table_noobs = pd.DataFrame(noobs,index=spell_nos,columns=['Individual obs',])\n",
+    "table_noobs['Share'] = table_noobs['Individual obs']/table_noobs['Individual obs'].loc['Total']\n",
+    "table_noobs['Share'] = table_noobs['Share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "print(table_noobs.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,6 +134,89 @@
       "1     &     121137.0 &   25870.0 &              0.20 &          0.21 \\\\\n",
       "2     &     286018.0 &   50210.0 &              0.47 &          0.40 \\\\\n",
       "Total &     613350.0 &  125571.0 &              1.00 &          1.00 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spell_nos = ['0','1','2','Total']\n",
+    "noobs = np.empty((4,2))\n",
+    "i = 0\n",
+    "f = open('./spell_count_college.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "#     print(line)\n",
+    "    if len(words)>0 and words[0] in spell_nos:\n",
+    "        noobs[i,0] = float(words[2].replace(\",\",\"\"))\n",
+    "        noobs[i,1] = float(words[3].replace(\",\",\"\"))\n",
+    "        i+=1\n",
+    "table_noobs = pd.DataFrame(noobs,index=spell_nos,columns=['Non-College','College'])\n",
+    "table_noobs['Non-College share'] = table_noobs['Non-College']/table_noobs['Non-College'].loc['Total']\n",
+    "table_noobs['College share'] = table_noobs['College']/table_noobs['College'].loc['Total']\n",
+    "table_noobs['Non-College share'] = table_noobs['Non-College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "table_noobs['College share'] = table_noobs['College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "print(table_noobs.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6600057504312824"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "50501/(50501+26015)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.70251697117666"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "285727/(285727+120992)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrll}\n",
+      "\\toprule\n",
+      "{} &  Non-College &   College & Non-College share & College share \\\\\n",
+      "\\midrule\n",
+      "0     &     205949.0 &   49737.0 &              0.34 &          0.39 \\\\\n",
+      "1     &     120992.0 &   26015.0 &              0.20 &          0.21 \\\\\n",
+      "2     &     285727.0 &   50501.0 &              0.47 &          0.40 \\\\\n",
+      "Total &     612668.0 &  126253.0 &              1.00 &          1.00 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
